# susecon-agent

./: .gitignore  Cargo.toml  Dockerfile  README.md  ai-agent-config.yaml  test.http
.github/workflows/: build.yml
chart/susecon-agent/: values.yaml
chart/susecon-agent/templates/: _helpers.tpl  deployment-backend.yaml  deployment.yaml  ingress.yaml  service.yaml
charts/susecon-agent/: Chart.yaml  sessions.yaml
charts/susecon-agent/templates/: configmap.yaml  deployment-backend.yaml  deployment.yaml  limitrange.yaml  resourcequota.yaml  service-backend.yaml  service.yaml
config/: sessions.yaml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  main.rs
crates/backend/: Cargo.toml
crates/backend/src/: main.rs  memory_bloat.rs  session_loader.rs  sessions.rs
jobs/: disable-swap-job.yaml  enable-swap-job.yaml
src/: main.rs  memory_bloat.rs  sessions.rs
