[package]
name = "susecon-backend"
version.workspace = true
edition.workspace = true
description = "SUSECon Session Recommendation Backend — Kubernetes Swap Demo"

[[bin]]
name = "susecon-backend"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc = "0.2"
serde_yaml = "0.9"
